fix: fixed about page with layout broken

--- a/src/components/pages/about/TechnologiesWorkedSection/styles.module.scss
+++ b/src/components/pages/about/TechnologiesWorkedSection/styles.module.scss
@@ -3,7 +3,7 @@
 
   div {
 		display: grid;
-		grid-template-columns: repeat(8, 1fr);
+		grid-template-columns: repeat(10, 1fr);
 		gap: 0.5rem;
 
 		span {
