--- a/src/styles/pages/About.module.scss
+++ b/src/styles/pages/About.module.scss
@@ -42,7 +42,7 @@
 		"formacao_educacional experiencias"
 		"tecnologias_trabalhadas experiencias";
 	gap: 2rem;
-	grid-template-rows: 290px 180px 1fr;
+	grid-template-rows: 320px 206px 1fr;
 	grid-template-columns: repeat(2, 1fr);
 	width: 100%;
 	margin-top: 4rem;
